syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.microservices.productcatalog";
option java_outer_classname = "ProductCatalogProto";

package productcatalog;

service ProductCatalogService {
  rpc GetProduct (ProductRequest) returns (ProductResponse) {}
}

message ProductRequest {
  int32 product_id = 1;
}

message ProductResponse {
  int32 product_id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
}